--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Weather-App</title>
     <link rel="stylesheet" href="Bootstrap_files/bootstrap.min.css">
 </head>
 <body>
@@ -23,18 +23,6 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">About this app</a>
               </li>
-              <!-- <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Islamabad</a></li>
-                  <li><a class="dropdown-item" href="#">Karachi</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Peshawar</a></li>
-                </ul>
-              </li> -->
-              
             </ul>
             <form class="d-flex" role="search">
               <input id="city" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
